style.css
body {
	background-color: #3b5998;
	font-size: 16px;
}

.container .main{
	background-color: rgba(225,225,255,0.8);
}
.container .header {

}
.header {
	font-family: 'Patua One', cursive;
	min-height: 80px;
	margin-top: 50px;
	margin-bottom: 50px;
	color: #F5F3F5;
}
.header span {
	text-align: center;
	width: 100%;
}
/*.header .logo {
	position: absolute;
	right: 20vw;
}*/
.header .title {
	font-size: 500%;
}
.header .byline {
	font-size: 125%;
	text-align: right;
}


.copy {
	/*height: 100%;*/
}
.copy span {
	width: 100%;
	font-family: 'Lora', serif;
	font-size: 375%;
}
@media only screen and (max-width: 1200px) {
	.copy span {
		text-align: center;
	}
}

/*.row:nth-child(odd) {
	background-color: rgba(225,225,255,0.8);
}
.row:nth-child(even) {
	background-color: rgba(225,225,255,0.7);
}*/

.gif img {
	width: 400px;
}
@media only screen and (max-width: 1200px) {
	.gif img {
		width: 360px;
	}
}
.card-thing {	
	transition: box-shadow .25s;
    border-radius: 2px;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    padding: 10px;
    background-color: #F5F3F5;
}

.copy-gif {
    /*display: flex;*/
}
@media (max-width: 430px) {  
	.gif img {
		width: 100%;
	}
}
@media (max-width: 991px) { 
	.gif img {
		margin-left: auto;
		margin-right: auto;
	}
}
@media (max-width: 991px) and (min-width: 601px) {
	.container.header .title {
		font-size: 300%;
	}
	.container.header .byline {
		font-size: 100%;
	}
	.container.main span {
		font-size: 275%;
	}
}
@media (max-width: 600px) {
	.container.header .title {
		font-size: 250%;
	}
	.container.header .byline {
		font-size: 100%;
	}
	.container.main span {
		font-size: 225%;
	}
}

@media (min-width: 992px) {

	.copy-gif:nth-child(2), .copy-gif:nth-child(2) .copy {
		height: 315px;
	}
	.copy-gif:nth-child(3), .copy-gif:nth-child(3) .copy {
		height: 420px;
	}
	.copy-gif:nth-child(4), .copy-gif:nth-child(4) .copy {
		height: 246px;
	}
	.copy-gif:nth-child(5), .copy-gif:nth-child(5) .copy {
		height: 626px;
	}
}
.call-button a {
	/*color: #F5F3F5;*/
	color: #E98A15;

}
.call-button .btn {
	/*background-color: #E98A15;*/
	background-color: #F5F3F5;

	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.call-button .btn:hover a {
	color: #F5F3F5;
	/*color: #E98A15;*/
}
.call-button .btn:hover {
	/*background-color: #F5F3F5;	*/
	background-color: #E98A15;

	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.footer {
	margin-bottom: 50px;
}

.tab a {
	color: #E98A15 !important;
}

.fb-share-button>span {
	vertical-align: middle;
}
.call-button span {
	vertical-align: middle;
}
.call-button>span {
	background-color: #E98A15;
}

.st_fblike_large>span {
	vertical-align: middle !important;
}

